fixed contrast

--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ body {
   font-size: 18px;
   font-weight: 700;
   padding: 24px;
-  color: #6070ff;
+  color: #2d34f0;
 }
 
 .fa-bars {
@@ -146,7 +146,7 @@ h2 {
   font-size: 13px;
   font-weight: 600;
   line-height: 16px;
-  color: #7a869a;
+  color: #485060;
 }
 
 .skillset {
@@ -480,8 +480,8 @@ textarea::placeholder {
     margin-top: 10px;
   }
 
-  .languages {
-    color: #0016db;
+  .languages li {
+    color: #0017eb;
   }
 
   .img-card-2 {
